--- a/css/Style.css
+++ b/css/Style.css
@@ -13,6 +13,12 @@ body {
     margin: 0;
 }
 
+header {
+    text-align: center;
+    padding: 20px;
+    margin: 0 auto;
+}
+
 .container {
     display: flex;
     justify-content: center;
@@ -138,5 +144,29 @@ h1 {
 
 .durée input[type="number"] {
     margin-right: -20px;
+
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+table th,
+table td {
+    text-align: left;
+    padding: 8px;
+}
+
+table th {
+    color: var(--color-blue-microlead);
+
+}
+
+h2 {
+    color: var(--color-blueact-microlead);
+    padding-bottom: 20px;
+    margin-top: 10px;
 
 }
