--- a/css/Style.css
+++ b/css/Style.css
@@ -15,16 +15,17 @@ body {
 
 header {
     text-align: center;
+    margin-top: 20px;
     padding: 20px;
-    margin: 0 auto;
 }
 
 .container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    margin: 0;
+    margin-top: 20px;
+    padding-top: 20px;
+    
 }
 
 .calculatrice {
@@ -180,7 +181,8 @@ h2 {
     width: 1000px;
     height: auto;
     margin: 0 auto;
-    margin-bottom: 20px;
+    margin-top: 20px;
+    
 }
 
 button#download-pdf {
@@ -202,32 +204,5 @@ button#download-pdf {
 .text p {
     padding-bottom: 20px;
 }
-.responsive{
-    background-color: var(--color-blueact-microlead);
 
-}
-@media(max-width:798px){
-    .container{
-        
-        display: block;
-        margin: 0;
-        padding: 0;
-    }
-    h1 {
-        text-align: center;
-        color: var(--color-blueact-microlead);
-        
-    }
-    .calculatrice{
-            display: flex;
-            flex-direction: column;
-            background-color: #fff;
-            border: 2px solid #ddd;
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);       
-    }
-    .form{
-         flex: 0 0 100%;
-        max-width: 100%;
-    }
 
-}
